--- a/src/components/misc/_ProjectThumbnail.scss
+++ b/src/components/misc/_ProjectThumbnail.scss
@@ -54,7 +54,6 @@
 
 @media only screen and (max-width: 768px) {
   .project-thumbnail-container {
-    pointer-events: none;
     width: 45vw;
     height: 45vw;
 
